src/test/deca/syntax/valid/provided/symbole_restant.deca
// Description:
//    Programme minimaliste utilisant tout les symbole autres que comparaison(juste le . n'est pas inclus) .
//
// Resultats:
//     
//
// Historique:
//    cree le 17/12/2024

{
    int i=7%4;
    i=3+4;
    i=8*4;
    i=7-1;
    i=i/4;
    i=i<<1;
    i=i>>1;
    boolean b1 = 3 > 1 && 1 < 4; // Et logique 
    boolean b2 = 7 < 3 || 3 > 1; // Ou logique
    i=3&&1;//sa doit marcher aussi pour cette partie normalement
}